--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style/styles.css">
     <script type="text/javascript" src="vendors/jquery-3.0.0.min.js"></script>
-    <script type="text/javascript" src="scripts/client.js"> </script>
+    <script type="text/javascript" src="scripts/client.js">
+    </script>
     <title></title>
-  </head>
-  <body>
-    <p id="red">Total red: 0</p>
-    <p id="yellow">Total yellow: 0</p>
-    <p id="green">Total green: 0</p>
-    <p id="blue">Total blue: 0</p>
+</head>
 
+<body>
+    <p id="red">Total Red: 0</p>
+    <p id="yellow">Total Yellow: 0</p>
+    <p id="green">Total Green: 0</p>
+    <p id="blue">Total Blue: 0</p>
 
     <button class="color-button" data-color="red">Red</button>
     <button class="color-button" data-color="yellow">Yellow</button>
@@ -20,7 +22,8 @@
     <button class="color-button" data-color="blue">Blue</button>
 
     <div class="container">
-      Hello World
     </div>
-  </body>
+    </div>
+</body>
+
 </html>
